--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "devDependencies": {
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "fontawesome": "^5.6.3",
+    "npm": "^9.7.1",
+    "sass": "^1.63.2",
+    "uninstall": "^0.0.0"
   }
 }
